2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.c: keep devices sorted alphabetically.

2007-02-13  Michael Natterer  <mitch@gimp.org>

	* modules/gimpinputdevicestore.[ch]: made dynamically loadable
	using GTypeModule.

	* modules/controller_linux_input.c (gimp_module_register):
	register the new dynamic type.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/controller_linux_input.c (key_events): corrected string
	(bug #407214).

2007-02-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerlist.c (gimp_controller_list_edit_clicked):
	don't use button as parent widget, it might be NULL.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.[ch]: added signals "device-added"
	and "device-removed".

	* modules/controller_linux_input.c: allow to hot-plug the
	configured input device.

2007-02-12  Mukund Sivaraman <muks@mukund.org>

	* plug-ins/imagemap/imap_cmd_guides.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_main.h
	* plug-ins/imagemap/imap_menu.c
	* plug-ins/imagemap/imap_object.c
	* plug-ins/imagemap/imap_preferences.h
	* plug-ins/imagemap/imap_object.h: Cleaned up some warnings in
	the imagemap plug-in; also fixed many function declarations.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpstringcombobox.c: fixed some issues with the
	new widget.

	* modules/controller_linux_input.c: define a property for the
	device store and use the device file as provided by the store.

	* modules/gimpinputdevicestore.c: removed debug output.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpstringcombobox.c (gimp_string_model_lookup)
	* modules/gimpinputdevicestore.c (gimp_input_device_store_lookup):
	fixed wrong use of GValue.

2007-02-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpstringcombobox.[ch]: added GimpStringComboBox.
